tests/fixtures/invalid/array_initializer_too_long.c
int main(void) {
    int values[2] = {1, 2, 3};
    return values[0];
}
